# OpenBBTerminal

./: .codespell.ignore  .codespell.skip  .pre-commit-config.yaml  README.md  pytest.ini  ruff.toml  ty.toml
cli/: .coveragerc  README.md  conftest.py  pyproject.toml
cli/integration/: test_commands.py  test_integration_base_controller.py  test_integration_base_platform_controller.py  test_integration_cli_controller.py  test_integration_obbject_registry.py
cli/openbb_cli/: auth.py  backend.py  cli.py  session.py
cli/openbb_cli/argparse_translator/: __init__.py  argparse_argument.py  argparse_class_processor.py  argparse_translator.py  obbject_registry.py  reference_processor.py  utils.py
cli/openbb_cli/codegen/: __init__.py  credentials.py  fetcher_gen.py  namespace_tree.py  package_gen.py  post_gen.py  project_gen.py  provider_gen.py  pydantic_gen.py  router_gen.py  test_gen.py
cli/openbb_cli/config/: completer.py  constants.py  loader.py  menu_text.py  setup.py  style.py
cli/openbb_cli/controllers/: base_controller.py  base_platform_controller.py  choices.py  cli_controller.py  credentials_controller.py  feature_controller.py  platform_controller_factory.py  script_parser.py  settings_controller.py  user_controller.py  utils.py
cli/openbb_cli/dispatchers/: __init__.py  _unpack.py  base.py  http.py  local.py  multi.py  openapi_schema.py  protocol.py  runtime.py  socrata.py  spec.py
cli/openbb_cli/models/: settings.py
cli/openbb_cli/outputs/: __init__.py  base.py  html.py  json.py  rich.py  stdio.py  tsv.py
cli/tests/: __init__.py  test_argparse_translator.py  test_argparse_translator_class_processor.py  test_argparse_translator_obbject_registry.py  test_argparse_translator_utils.py  test_auth.py  test_backend.py  test_cli.py  test_codegen_credentials.py  test_codegen_fetcher_gen.py  test_codegen_namespace_tree.py  test_codegen_package_gen.py  test_codegen_post_gen.py  test_codegen_project_gen.py  test_codegen_provider_gen.py  test_codegen_pydantic_gen.py  test_codegen_router_gen.py  test_codegen_test_gen.py  test_config_completer.py  test_config_console.py  test_config_loader.py  test_config_menu_text.py  test_config_setup.py  test_config_style.py  test_controllers_base_controller.py  test_controllers_base_platform_controller.py  test_controllers_choices.py  test_controllers_cli_controller.py  test_controllers_controller_factory.py  test_controllers_credentials_controller.py  test_controllers_feature_controller.py  test_controllers_script_parser.py  test_controllers_settings_controller.py  test_controllers_user_controller.py  test_controllers_utils.py  test_controllers_utils_extract.py  test_dispatchers_http.py  test_dispatchers_local.py  test_dispatchers_multi.py  test_dispatchers_openapi_schema.py  (+13 more)
cookiecutter/: cookiecutter.json  pyproject.toml
cookiecutter/openbb_cookiecutter/: cli.py
cookiecutter/openbb_cookiecutter/template/: cookiecutter.json
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
desktop/src-tauri/frameworks/: libssl.3.dylib
desktop/src-tauri/scripts/: copy_openssl.cjs  copy_openssl_win.ps1  fix_dylibs.sh  sign.ps1
desktop/src-tauri/src/: main.rs
openbb_platform/: README.md  conftest.py  dev_install.py  pyproject.toml
openbb_platform/core/: .coveragerc  README.md  pyproject.toml
openbb_platform/core/integration/: conftest.py  test_built_package.py
openbb_platform/core/openbb/: __init__.py
openbb_platform/core/openbb_core/: build.py  env.py
openbb_platform/core/tests/: conftest.py  test_env.py
openbb_platform/extensions/agent_server/: README.md  openbb.toml  pyproject.toml
openbb_platform/extensions/commodity/: pyproject.toml
openbb_platform/extensions/crypto/: pyproject.toml
openbb_platform/extensions/currency/: pyproject.toml
openbb_platform/extensions/derivatives/: pyproject.toml
openbb_platform/extensions/devtools/: README.md  pyproject.toml
openbb_platform/extensions/econometrics/: README.md  pyproject.toml
openbb_platform/extensions/economy/: pyproject.toml
openbb_platform/extensions/equity/: pyproject.toml
openbb_platform/extensions/etf/: pyproject.toml
openbb_platform/extensions/fixedincome/: pyproject.toml
openbb_platform/extensions/index/: pyproject.toml
openbb_platform/extensions/mcp_server/: .coveragerc  README.md  pyproject.toml
openbb_platform/extensions/news/: README.md  pyproject.toml
openbb_platform/extensions/platform_api/: .coveragerc  README.md  pyproject.toml
openbb_platform/extensions/quantitative/: README.md  pyproject.toml
openbb_platform/extensions/regulators/: pyproject.toml
openbb_platform/extensions/technical/: README.md  pyproject.toml
openbb_platform/obbject_extensions/charting/: README.md  pyproject.toml
openbb_platform/providers/alpha_vantage/: pyproject.toml
openbb_platform/providers/benzinga/: pyproject.toml
openbb_platform/providers/biztoc/: pyproject.toml
openbb_platform/providers/bls/: .coveragerc  .gitignore  README.md  hatch_build.py  pyproject.toml
openbb_platform/providers/cboe/: pyproject.toml
openbb_platform/providers/cftc/: README.md  pyproject.toml
openbb_platform/providers/congress_gov/: pyproject.toml
openbb_platform/providers/deribit/: pyproject.toml
openbb_platform/providers/ecb/: pyproject.toml
openbb_platform/providers/econdb/: pyproject.toml
openbb_platform/providers/eia/: pyproject.toml
openbb_platform/providers/famafrench/: README.md  pyproject.toml
openbb_platform/providers/federal_reserve/: README.md  pyproject.toml
openbb_platform/providers/finra/: pyproject.toml
openbb_platform/providers/finviz/: pyproject.toml
openbb_platform/providers/fmp/: pyproject.toml
openbb_platform/providers/fred/: pyproject.toml
openbb_platform/providers/government_us/: pyproject.toml
openbb_platform/providers/imf/: .gitignore  README.md  hatch_build.py  pyproject.toml
openbb_platform/providers/intrinio/: pyproject.toml
openbb_platform/providers/multpl/: pyproject.toml
openbb_platform/providers/nasdaq/: pyproject.toml
(+1618 files in other folders)
