[tool.poetry]
name = "openbb-cli"
version = "1.4.1"
description = "Investment Research for Everyone, Anywhere."
authors = ["OpenBB <hello@openbb.co>"]
packages = [{ include = "openbb_cli" }]
license = "AGPL-3.0-only"
readme = "README.md"
homepage = "https://openbb.co"
repository = "https://github.com/OpenBB-finance/OpenBB"
documentation = "https://docs.openbb.co/cli"

[tool.poetry.scripts]
openbb = 'openbb_cli.cli:main'

[tool.poetry.dependencies]
python = ">=3.10,<4"

# OpenBB dependencies
openbb-core = "^1.5.7"

# CLI dependencies
prompt-toolkit = "^3.0.50"
rich = "^14.0.0"
python-dotenv = "^1.0.1"
openpyxl = "^3.1.5"

[tool.poetry.extras]
charting = ["openbb-charting"]
interactive = ["pywry"]
all = ["openbb-charting", "pywry"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
