[project]
name = "openbb-cli"
version = "2.0.0"
description = "Investment Research for Everyone, Anywhere."
authors = [{ name = "OpenBB Team", email = "hello@openbb.co" }]
license = { text = "AGPL-3.0-only" }
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "openbb-core[pandas]>=1.7.0,<2.0.0",
    "prompt-toolkit>=3.0.50,<4.0.0",
    "rich>=14.0.0,<15.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "openpyxl>=3.1.5,<4.0.0",
    "httpx>=0.28.0,<1.0.0",
]

[project.optional-dependencies]
charting = ["openbb-charting>=3.0.0"]
interactive = ["pywry>=2.0.0"]
all = ["openbb-charting>=3.0.0", "pywry>=2.0.0"]

[project.scripts]
openbb = "openbb_cli.cli:main"

[project.urls]
Homepage = "https://openbb.co"
Repository = "https://github.com/OpenBB-finance/OpenBB"
Documentation = "https://docs.openbb.co/cli"

[dependency-groups]
dev = ["openbb-devtools"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openbb_cli"]

[tool.hatch.build.targets.sdist]
include = [
    "openbb_cli",
    "README.md",
    "pyproject.toml",
]

# Workspace-style path source: dev installs of openbb-cli pick up the in-repo
# charting checkout instead of resolving the published wheel. The version pin
# in [project.optional-dependencies] is still authoritative for downstream
# consumers of the published openbb-cli wheel.
[tool.uv.sources]
openbb-charting = { path = "../openbb_platform/obbject_extensions/charting", editable = true }

# ---------------------------------------------------------------------------
# Ruff — sole linter / formatter / import-sorter for openbb-cli.
# Mirrors the repo-wide ruff.toml but is scoped to this package so that
# ``ruff check cli`` (and editor integrations launched from this directory)
# pick up identical settings without depending on the top-level configuration
# being discoverable.
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py310"
fix = true

[tool.ruff.lint]
select = [
    "D",
    "E",
    "W",
    "F",
    "S",
    "UP",
    "I",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "SIM",
    "T20",
]
ignore = [
    "PLR2004",
    "PLR0913",
    "PLR0915",
    "PLC0415",
    "E402",
    "E501",
    "D202",
    "D203",
    "D205",
    "D206",
    "D210",
    "D212",
    "D213",
    "D214",
    "D215",
    "D300",
    "D400",
    "D404",
    "D405",
    "D406",
    "D407",
    "D408",
    "D409",
    "D410",
    "D411",
    "D413",
    "D415",
    "D416",
    "D417",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "D"]
"integration/**" = ["S101", "D"]
"**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 26
max-returns = 9
max-statements = 30

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ty]
[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
include = ["openbb_cli"]
exclude = ["openbb_cli/assets", "tests", "integration"]

[tool.ty.rules]
unresolved-import = "warn"
