[package]
name = "openbb-platform"
version = "1.0.2"
description = "Open Data Platform by OpenBB. A desktop application for managing virtual environments, application backend servers."
authors = ["OpenBB, Inc."]
license = "AGPL-3.0"
repository = "https://github.com/OpenBB-finance/OpenBB/"
default-run = "openbb-platform"
edition = "2024"
rust-version = "1.90.0"


[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tokio = { version = "^1.47.1", features = ["full", "test-util"] }
serde_json = { version = "^1.0.143", features = ["preserve_order"] }
serde_yaml = "^0.9"
chrono = "^0.4"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.6", features = ["tray-icon", "devtools"] }
tauri-cli = "^2.9.6"
tauri-plugin-log = "2.8.0"
regex = "^1.11.1"
reqwest = { version = "^0.12.23", features = ["json"] }
once_cell = "^1.21.3"
open = "^5.3"
ctrlc = "^3.4.7"
futures = "^0.3.31"
tauri-plugin-shell = "2"
url = "^2.5.4"
urlencoding = "^2.1.3"
uuid = { version = "^1.18.0", features = ["v4"] }
toml = "^0.9.5"
futures-util = "0.3"
futures-channel = "0.3"
tokio-tungstenite = "0.27.0"
fs2 = "0.4.3"
cc = "1.2.33"
dirs = "^6.0.0"
tauri-plugin-dialog = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-fs = "2"
mockall = "^0.13.1"
openssl = { workspace = true }
tauri-plugin-opener = "2"
which = "8.0.0"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

[target.'cfg(target_os= "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSResponder", "NSColor", "NSWindow"] }
objc2-foundation = { version = "0.3", features = ["NSGeometry", "NSNotification", "NSString", "NSObject"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "objbase", "shobjidl_core", "shlobj", "combaseapi", "unknwnbase", "objidl", "wtypesbase", "winerror", "minwindef", "wtypes", "oleauto"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

[target.'cfg(linux)'.dependencies]
glib = "^0.21.1"

[features]
# This feature depends on the Tauri CLI & CLI plugin for updater
# By default Tauri runs in production mode
# when the `dev` profile is used, it runs in development mode
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]


[[bin]]
name = "openbb-platform"
path = "src/main.rs"
