[tool.poetry]
name = "openbb-devtools"
version = "1.6.0"
description = "Tools for OpenBB Platform Developers"
authors = ["OpenBB Team <hello@openbb.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "openbb_devtools" }]

[tool.poetry.dependencies]
python = ">=3.10,<4"              # scipy forces <4.0 explicitly
ruff = "^0.13"
pylint = "^3.3"
mypy = "^1.12.1"
pydocstyle = "^6.3.0"
black = "^25.1.0"
codespell = "^2.2.5"
pre-commit = "^3.5.0"
tox = "^4.11.3"
pytest = ">=8.4.1"
pytest-subtests = "^0.11.0"
pytest-recorder = ">=0.6.3"
pytest-asyncio = "^0.23.2"
pytest-order = "^1.3.0"
pytest-cov = "^4.1.0"
ipykernel = "^6.30.1"
types-python-dateutil = "^2.8.19.14"
types-toml = "^0.10.8.7"
poetry = ">=2.1.3"
openbb-core = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
