[project]
name = "openbb-devtools"
version = "2.0.0"
description = "Tools for OpenBB Platform Developers"
authors = [{ name = "OpenBB Team", email = "hello@openbb.co" }]
license = { text = "AGPL-3.0-only" }
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "ruff>=0.15,<0.16",
    "ty>=0.0.1a14",
    "pydocstyle>=6.3.0,<7.0.0",
    "codespell>=2.2.5,<3.0.0",
    "pre-commit>=3.5.0,<4.0.0",
    "tox>=4.11.3,<5.0.0",
    "pytest>=9.0.3",
    "pytest-subtests>=0.11.0,<1.0.0",
    "pytest-recorder>=0.6.5",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-order>=1.3.0,<2.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-freezer>=0.4.9,<1.0.0",
    "ipykernel>=6.30.1",
    "types-python-dateutil>=2.8.19.14,<3.0.0",
    "types-toml>=0.10.8.7,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openbb_devtools"]

[tool.hatch.build.targets.sdist]
include = [
    "openbb_devtools",
    "README.md",
    "pyproject.toml",
]
