[tool.poetry]
name = "openbb-econometrics"
version = "1.7.0"
description = "Econometrics Toolkit for OpenBB"
authors = ["OpenBB Team <hello@openbb.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "openbb_econometrics" }]

[tool.poetry.dependencies]
python = ">=3.10,<4"  # scipy forces python <4.0 explicitly
openbb-core = "^1.6.0"
pandas-ta-openbb = "^0.4.23"
arch = "^7.2"
linearmodels = "^6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
econometrics = "openbb_econometrics.econometrics_router:router"

[tool.poetry.plugins."openbb_charting_extension"]
econometrics = "openbb_econometrics.econometrics_views:EconometricsViews"