[tool.poetry]
name = "openbb-etf"
version = "1.5.1"
description = "ETF extension for OpenBB"
authors = ["OpenBB Team <hello@openbb.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "openbb_etf" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
openbb-core = "^1.5.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
etf = "openbb_etf.etf_router:router"

[tool.poetry.plugins."openbb_charting_extension"]
etf = "openbb_etf.etf_views:EtfViews"
