[project]
name = "openbb-etf"
version = "2.0.0"
description = "ETF extension for OpenBB"
authors = [{ name = "OpenBB Team", email = "hello@openbb.co" }]
license = { text = "AGPL-3.0-only" }
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = ["openbb-core>=2.0.0"]

[dependency-groups]
dev = ["openbb-devtools>=2.0.0"]

[project.entry-points."openbb_core_extension"]
etf = "openbb_etf.etf_router:router"

[project.entry-points."openbb_charting_extension"]
etf = "openbb_etf.etf_views:EtfViews"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openbb_etf"]

[tool.hatch.build.targets.sdist]
include = [
	"openbb_etf",
	"README.md",
	"pyproject.toml",
]

# This is here while V5 is under development
[tool.uv.sources]
openbb-core = { path = "../../core", editable = true }
openbb-devtools = { path = "../devtools", editable = true }
